instructions.Instructions.scala.error
Compilation error:
Instructions:16: error: ';' expected but ')' found.
brushUp);
       ^